--- a/tsconfig.build.json
+++ b/tsconfig.build.json
@@ -10,7 +10,7 @@
   },
   "exclude": [
     "setup.ts",
-    "src/showcase/*",
+    "src/story/*",
     "src/**/*.stories.tsx",
     "src/**/*.test.tsx",
     "src/**/*.test.ts",
