--- a/package.json
+++ b/package.json
@@ -29,19 +29,18 @@
   ],
   "scripts": {
     "build": "tsc --build ./tsconfig.build.json --force",
-    "build:docs": "storybook build --docs",
-    "build:storybook": "storybook build",
     "test": "vitest",
     "test:cov": "vitest --coverage",
-    "storybook": "storybook dev",
+    "storybook": "yarn sb:styles && storybook dev",
     "sb": "yarn storybook",
+    "sb:docs": "yarn sb:styles && storybook dev --docs",
+    "sb:build": "yarn sb:styles && storybook build --docs",
+    "sb:styles": "cp ./node_modules/@picocss/pico/css/pico.colors.min.css public/",
     "sb:up": "yarn dlx storybook@latest upgrade",
-    "sb:docs": "storybook dev --docs",
     "lint": "eslint --ext .tsx,.ts ./src",
     "lint:fix": "yarn run lint --fix",
     "semantic-release": "semantic-release",
-    "ui": "yarn upgrade-interactive",
-    "postinstall": "cp ./node_modules/@picocss/pico/css/pico.colors.min.css public/"
+    "ui": "yarn upgrade-interactive"
   },
   "devDependencies": {
     "@emotion/react": "^11.11.3",
