--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@form-atoms/list-atom",
-  "packageManager": "yarn@4.0.2",
+  "packageManager": "yarn@4.10.2",
   "version": "0.0.0-semantic-release",
   "author": "Miroslav Petrik <miroslavpetrik@outlook.com>",
   "homepage": "https://github.com/form-atoms/list-atom#readme",
@@ -39,12 +39,12 @@
     "sb:up": "yarn dlx storybook@latest upgrade",
     "lint": "eslint --ext .tsx,.ts ./src",
     "lint:fix": "yarn run lint --fix",
-    "semantic-release": "semantic-release",
-    "ui": "yarn upgrade-interactive"
+    "upgrade-packages": "yarn upgrade-interactive",
+    "upgrade-yarn": "yarn set version stable && yarn install"
   },
   "devDependencies": {
-    "@emotion/react": "^11.11.3",
-    "@picocss/pico": "^2.0.3",
+    "@emotion/react": "^11.14.0",
+    "@picocss/pico": "^2.1.1",
     "@semantic-release/changelog": "^6.0.3",
     "@semantic-release/commit-analyzer": "^11.1.0",
     "@semantic-release/git": "^10.0.1",
@@ -62,9 +62,10 @@
     "@storybook/react-vite": "^8.0.4",
     "@storybook/test": "^8.0.4",
     "@storybook/theming": "^8.0.4",
-    "@testing-library/jest-dom": "^6.4.2",
-    "@testing-library/react": "^14.2.1",
-    "@testing-library/user-event": "^14.5.2",
+    "@testing-library/dom": "^10.4.1",
+    "@testing-library/jest-dom": "^6.8.0",
+    "@testing-library/react": "^16.3.0",
+    "@testing-library/user-event": "^14.6.1",
     "@types/eslint": "^8.56.5",
     "@types/lodash.shuffle": "^4.2.9",
     "@types/prettier": "^3.0.0",
@@ -74,29 +75,29 @@
     "@types/semantic-release": "^20.0.6",
     "@typescript-eslint/eslint-plugin": "7.1.0",
     "@typescript-eslint/parser": "7.1.0",
-    "@vitejs/plugin-react": "^4.2.1",
-    "@vitest/coverage-v8": "^1.3.1",
+    "@vitejs/plugin-react": "^5.0.3",
+    "@vitest/coverage-v8": "^3.2.4",
     "eslint": "8.57.0",
     "eslint-config-prettier": "9.1.0",
     "eslint-import-resolver-typescript": "^3.6.1",
     "eslint-plugin-import": "^2.29.1",
     "eslint-plugin-prettier": "5.1.3",
-    "form-atoms": "^3.2.4",
-    "happy-dom": "^13.6.2",
-    "jotai": "2.7.0",
+    "form-atoms": "^3.3.1",
+    "happy-dom": "^18.0.1",
+    "jotai": "2.14.0",
     "jotai-devtools": "0.8.0",
     "jotai-effect": "0.6.0",
     "lodash.shuffle": "^4.2.0",
-    "prettier": "3.2.5",
+    "prettier": "3.6.2",
     "react": "^18.2.0",
     "react-copy-to-clipboard": "^5.1.0",
     "react-dom": "^18.2.0",
     "semantic-release": "^23.0.2",
-    "shiki": "^1.1.7",
+    "shiki": "^3.12.2",
     "storybook": "^8.0.4",
-    "typescript": "5.3.3",
-    "vite": "^5.1.4",
-    "vitest": "^1.3.1"
+    "typescript": "5.9.2",
+    "vite": "^7.1.6",
+    "vitest": "^3.2.4"
   },
   "dependencies": {
     "react-render-prop-type": "0.1.0"
