--- a/package.json
+++ b/package.json
@@ -31,12 +31,11 @@
     "build": "tsc --build ./tsconfig.build.json --force",
     "test": "vitest",
     "test:cov": "vitest --coverage",
-    "storybook": "yarn sb:styles && storybook dev",
-    "sb": "yarn storybook",
-    "sb:docs": "yarn sb:styles && storybook dev --docs",
-    "sb:build": "yarn sb:styles && storybook build --docs",
-    "sb:styles": "cp ./node_modules/@picocss/pico/css/pico.colors.min.css public/",
-    "sb:up": "yarn dlx storybook@latest upgrade",
+    "storybook": "yarn storybook:styles && storybook dev",
+    "storybook:docs": "yarn storybook:styles && storybook dev --docs",
+    "storybook:build": "yarn storybook:styles && storybook build --docs",
+    "storybook:styles": "cp ./node_modules/@picocss/pico/css/pico.colors.min.css public/",
+    "storybook:upgrade": "yarn dlx storybook@latest upgrade",
     "lint": "eslint --ext .tsx,.ts ./src",
     "lint:fix": "yarn run lint --fix",
     "upgrade-packages": "yarn upgrade-interactive",
@@ -51,17 +50,9 @@
     "@semantic-release/github": "^9.2.6",
     "@semantic-release/npm": "^11.0.2",
     "@semantic-release/release-notes-generator": "^12.1.0",
-    "@storybook/addon-actions": "^8.0.4",
-    "@storybook/addon-docs": "^8.0.4",
-    "@storybook/addon-essentials": "^8.0.4",
-    "@storybook/addon-interactions": "^8.0.4",
-    "@storybook/addon-links": "^8.0.4",
-    "@storybook/addon-mdx-gfm": "^8.0.4",
-    "@storybook/manager-api": "^8.0.4",
-    "@storybook/react": "^8.0.4",
-    "@storybook/react-vite": "^8.0.4",
-    "@storybook/test": "^8.0.4",
-    "@storybook/theming": "^8.0.4",
+    "@storybook/addon-docs": "^9.1.7",
+    "@storybook/addon-links": "^9.1.7",
+    "@storybook/react-vite": "^9.1.7",
     "@testing-library/dom": "^10.4.1",
     "@testing-library/jest-dom": "^6.8.0",
     "@testing-library/react": "^16.3.0",
@@ -82,6 +73,7 @@
     "eslint-import-resolver-typescript": "^3.6.1",
     "eslint-plugin-import": "^2.29.1",
     "eslint-plugin-prettier": "5.1.3",
+    "eslint-plugin-storybook": "9.1.7",
     "form-atoms": "^3.3.1",
     "happy-dom": "^18.0.1",
     "jotai": "2.14.0",
@@ -94,7 +86,7 @@
     "react-dom": "^18.2.0",
     "semantic-release": "^23.0.2",
     "shiki": "^3.12.2",
-    "storybook": "^8.0.4",
+    "storybook": "^9.1.7",
     "typescript": "5.9.2",
     "vite": "^7.1.6",
     "vitest": "^3.2.4"
