--- a/package.json
+++ b/package.json
@@ -45,11 +45,11 @@
     "@emotion/react": "^11.14.0",
     "@picocss/pico": "^2.1.1",
     "@semantic-release/changelog": "^6.0.3",
-    "@semantic-release/commit-analyzer": "^11.1.0",
+    "@semantic-release/commit-analyzer": "^13.0.1",
     "@semantic-release/git": "^10.0.1",
-    "@semantic-release/github": "^9.2.6",
-    "@semantic-release/npm": "^11.0.2",
-    "@semantic-release/release-notes-generator": "^12.1.0",
+    "@semantic-release/github": "^11.0.6",
+    "@semantic-release/npm": "^12.0.2",
+    "@semantic-release/release-notes-generator": "^14.1.0",
     "@storybook/addon-docs": "^9.1.7",
     "@storybook/addon-links": "^9.1.7",
     "@storybook/react-vite": "^9.1.7",
@@ -63,7 +63,7 @@
     "@types/react": "^18",
     "@types/react-copy-to-clipboard": "^5",
     "@types/react-dom": "^18",
-    "@types/semantic-release": "^20.0.6",
+    "@types/semantic-release": "^21.1.0",
     "@typescript-eslint/eslint-plugin": "7.1.0",
     "@typescript-eslint/parser": "7.1.0",
     "@vitejs/plugin-react": "^5.0.3",
@@ -84,7 +84,7 @@
     "react": "^18.2.0",
     "react-copy-to-clipboard": "^5.1.0",
     "react-dom": "^18.2.0",
-    "semantic-release": "^23.0.2",
+    "semantic-release": "^24.2.9",
     "shiki": "^3.12.2",
     "storybook": "^9.1.7",
     "typescript": "5.9.2",
@@ -95,7 +95,8 @@
     "react-render-prop-type": "0.1.0"
   },
   "publishConfig": {
-    "access": "public"
+    "access": "public",
+    "provenance": true
   },
   "release": {
     "branches": [
