--- a/package.json
+++ b/package.json
@@ -38,11 +38,14 @@
     "storybook:upgrade": "yarn dlx storybook@latest upgrade",
     "lint": "eslint --ext .tsx,.ts ./src",
     "lint:fix": "yarn run lint --fix",
+    "format": "prettier . --write",
+    "format:check": "prettier . --check",
     "upgrade-packages": "yarn upgrade-interactive",
     "upgrade-yarn": "yarn set version stable && yarn install"
   },
   "devDependencies": {
     "@emotion/react": "^11.14.0",
+    "@eslint/js": "^9.37.0",
     "@picocss/pico": "^2.1.1",
     "@semantic-release/changelog": "^6.0.3",
     "@semantic-release/commit-analyzer": "^13.0.1",
@@ -57,23 +60,16 @@
     "@testing-library/jest-dom": "^6.8.0",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^14.6.1",
-    "@types/eslint": "^8.56.5",
     "@types/lodash.shuffle": "^4.2.9",
-    "@types/prettier": "^3.0.0",
     "@types/react": "^18",
     "@types/react-copy-to-clipboard": "^5",
     "@types/react-dom": "^18",
     "@types/semantic-release": "^21.1.0",
-    "@typescript-eslint/eslint-plugin": "7.1.0",
-    "@typescript-eslint/parser": "7.1.0",
     "@vitejs/plugin-react": "^5.0.3",
     "@vitest/coverage-v8": "^3.2.4",
-    "eslint": "8.57.0",
-    "eslint-config-prettier": "9.1.0",
-    "eslint-import-resolver-typescript": "^3.6.1",
-    "eslint-plugin-import": "^2.29.1",
-    "eslint-plugin-prettier": "5.1.3",
-    "eslint-plugin-storybook": "9.1.7",
+    "eslint": "9.37.0",
+    "eslint-config-prettier": "10.1.8",
+    "eslint-plugin-storybook": "9.1.10",
     "form-atoms": "^3.3.1",
     "happy-dom": "^18.0.1",
     "jotai": "2.14.0",
@@ -88,6 +84,7 @@
     "shiki": "^3.12.2",
     "storybook": "^9.1.7",
     "typescript": "5.9.2",
+    "typescript-eslint": "^8.46.0",
     "vite": "^7.1.6",
     "vitest": "^3.2.4"
   },
