--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "@vitest/coverage-v8": "^3.2.4",
     "eslint": "9.37.0",
     "eslint-config-prettier": "10.1.8",
+    "eslint-plugin-react-hooks": "^7.0.0",
     "eslint-plugin-storybook": "9.1.10",
     "form-atoms": "^3.3.1",
     "happy-dom": "^18.0.1",
@@ -89,7 +90,7 @@
     "vitest": "^3.2.4"
   },
   "dependencies": {
-    "react-render-prop-type": "0.1.0"
+    "react-render-prop-type": "1.0.0"
   },
   "publishConfig": {
     "access": "public",
