--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "upgrade-yarn": "yarn set version stable && yarn install"
   },
   "devDependencies": {
+    "@conform-to/zod": "^1.12.0",
     "@emotion/react": "^11.14.0",
     "@eslint/js": "^9.37.0",
     "@picocss/pico": "^2.1.1",
@@ -61,9 +62,9 @@
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^14.6.1",
     "@types/lodash.shuffle": "^4.2.9",
-    "@types/react": "^18",
+    "@types/react": "^19.2.2",
     "@types/react-copy-to-clipboard": "^5",
-    "@types/react-dom": "^18",
+    "@types/react-dom": "^19.2.2",
     "@types/semantic-release": "^21.1.0",
     "@vitejs/plugin-react": "^5.0.4",
     "@vitest/coverage-v8": "^3.2.4",
@@ -78,9 +79,9 @@
     "jotai-effect": "2.1.2",
     "lodash.shuffle": "^4.2.0",
     "prettier": "3.6.2",
-    "react": "^18.2.0",
+    "react": "^19.2.0",
     "react-copy-to-clipboard": "^5.1.0",
-    "react-dom": "^18.2.0",
+    "react-dom": "^19.2.0",
     "remark-gfm": "^4.0.1",
     "semantic-release": "^24.2.9",
     "shiki": "^3.13.0",
@@ -88,7 +89,8 @@
     "typescript": "5.9.3",
     "typescript-eslint": "^8.46.0",
     "vite": "^7.1.9",
-    "vitest": "^3.2.4"
+    "vitest": "^3.2.4",
+    "zod": "^3.25.76"
   },
   "dependencies": {
     "react-render-prop-type": "1.0.0"
