--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -29,17 +29,17 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: lts/Iron
+          node-version-file: ".nvmrc"
 
       - name: Cache node_modules
         id: cache-node-modules
-        uses: actions/cache@v3
+        uses: actions/cache@v4
         with:
           path: node_modules
           key: ${{ runner.os }}-modules-${{ hashFiles('**/yarn.lock') }}
 
       - name: 🏗️ Install
-        uses: borales/actions-yarn@v4
+        uses: borales/actions-yarn@v5
         with:
           cmd: install
 
@@ -53,12 +53,12 @@ jobs:
           slug: form-atoms/list-atom
 
       - name: 🔨 Build
-        uses: borales/actions-yarn@v4
+        uses: borales/actions-yarn@v5
         with:
           cmd: build
 
       - name: 🚢 Release
-        uses: borales/actions-yarn@v4
+        uses: borales/actions-yarn@v5
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
