--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -8,6 +8,7 @@ on:
 jobs:
   storybook:
     name: 🎨 Storybook Build & Deploy to GH Pages
+    if: ${{!startsWith(github.event.head_commit.message, 'chore:') && !startsWith(github.event.pull_request.title, 'chore:') && !startsWith(github.event.head_commit.message, 'chore(') && !startsWith(github.event.pull_request.title, 'chore(') }}
     permissions:
       pages: write # to deploy to Pages
       id-token: write # to verify the deployment originates from an appropriate source
